--- a/index.html
+++ b/index.html
@@ -19,8 +19,10 @@
                 <na id="nav-bar">
                     <ul>
                         <li>SERVING CALIFORNIA SINCE 1998  | </li>
-                        <li>(833) - 525 - 5728</li>
-                        <li></li>
+                        <li><i class="fa-solid fa-phone"></i>(833) - 525 - 5728</li>
+                        <li>
+                            <button>CALL NOW</button>
+                        </li>
                     </ul>
                 </nav>
             </div>
