top notice section complete

--- a/index.html
+++ b/index.html
@@ -1,33 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Maineri Low Firm</title>
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Maineri Low Firm</title>
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">    
-    <link rel="stylesheet" href="css/style.css">
-
-</head>
-<body>
-<!-- Header section -->
-    <header>
-        <!-- Top navber -->
-        <div class="topnav">
+        <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
+        />
+        <link rel="stylesheet" href="css/style.css" />
+    </head>
+    <body>
+        <!-- notice board  -->
+        <section class="notice-board">
             <div class="container">
-                <na id="nav-bar">
+                <div class=" ">
                     <ul>
-                        <li>SERVING CALIFORNIA SINCE 1998  | </li>
-                        <li><i class="fa-solid fa-phone"></i>(833) - 525 - 5728</li>
+                        <li>SERVING CALIFORNIA SINCE 1998</li>
                         <li>
-                            <button>CALL NOW</button>
+                            <i class="fa-solid fa-phone"></i> (833) - 525 - 5728
+                        </li>
+                        <li>
+                            <button class="btn">CALL NOW</button>
                         </li>
                     </ul>
-                </nav>
+                </div>
             </div>
-        </div>
-    </header>
-<!-- Header section -->
-</body>
+        </section>
+        <!-- Header section -->
+        <header></header>
+        <!-- Header section -->
+    </body>
 </html>
