--- a/index.html
+++ b/index.html
@@ -29,5 +29,30 @@
         </div>
     </header>
 <!-- Header section -->
+
+
+<div class="botton-nav">
+    <div class="container">
+        <div class="logo">
+            <img src="img/navber-logo.png" alt="">
+            <div class="firm-name">
+                <h1>Maineri Law Firm</h1>
+                <p>Paul E. Maineri Attorney at Law, Inc.</p>
+            </div>
+        </div>
+        <div class="menu">
+            <nav>
+                <ul>
+                    <li>HOME</li>
+                    <li>OUR FIRM</li>
+                    <li>PRACTIVE ARIAS</li>
+                    <li>CLIENT REVEW</li>
+                    <li>CONTACT US</li>
+                    <li class="search-icon"><i class="fa-solid fa-magnifying-glass"></i></li>
+                </ul>
+            </nav>
+        </div>
+    </div>
+</div>
 </body>
 </html>
