--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
         <link rel="stylesheet" href="css/style.css" />
     </head>
     <body>
-        <!-- notice board  -->
+        <!-- Notice board  -->
         <section class="notice-board">
             <div class="container">
-                <div class=" ">
+                <div class="">
                     <ul>
                         <li>SERVING CALIFORNIA SINCE 1998</li>
                         <li>
@@ -29,8 +29,35 @@
                 </div>
             </div>
         </section>
+        <!-- Notice board-->
+
         <!-- Header section -->
-        <header></header>
+        <header>
+            <div class="container">
+                <div class="topmenu">
+                    <div class="logo-side">
+                        <div class="logo">
+                            <img src="img/navber-logo.png" alt="">
+                        </div>
+                        <div class="brand-name">
+                            <h2>Maineri Low Firm</h2>
+                            <p>Paul E. Maineri Attorney at Law, Inc.</p>
+                        </div>
+                    </div>
+                    
+                    <div class="menu">
+                        <ul>
+                            <li><a href="">HOME</a></li>
+                            <li><a href="">OUR FIRM</a></li>
+                            <li><a href="">PRACTICE AREAS</a></li>
+                            <li><a href="">CLIENT REVIEWS</a></li>
+                            <li><a href="">CONTACT US</a></li>
+                            <li><i class="fa-solid fa-magnifying-glass"></i></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </header>
         <!-- Header section -->
     </body>
 </html>
