--- a/index.html
+++ b/index.html
@@ -52,12 +52,19 @@
                             <li><a href="">PRACTICE AREAS</a></li>
                             <li><a href="">CLIENT REVIEWS</a></li>
                             <li><a href="">CONTACT US</a></li>
-                            <li><i class="fa-solid fa-magnifying-glass"></i></li>
-                        </ul>
+                            <li class="pt-5"><i class="fa-solid fa-magnifying-glass"></i></li>                                
+                            <h1><i class="fa-solid fa-bars"></i></h1>
+                        </ul>                    
                     </div>
                 </div>
             </div>
         </header>
         <!-- Header section -->
+
+        <!-- Main section -->
+        <section class="main-section">
+            
+        </section>
+        <!-- Main section -->
     </body>
 </html>
