--- a/index.html
+++ b/index.html
@@ -31,45 +31,53 @@
         </section>
         <!-- Notice board-->
 
-        <div class="bg-img">
+        <div class="head-main-wrap">
+            <!-- header  -->
             <header>
                 <div class="container">
                     <div class="topmenu">
                         <div class="logo-side">
                             <div class="logo">
-                                <img src="img/navber-logo.png" alt="">
+                                <img src="img/navber-logo.png" alt="" />
                             </div>
                             <div class="brand-name">
                                 <h2>Maineri Low Firm</h2>
                                 <p>Paul E. Maineri Attorney at Law, Inc.</p>
                             </div>
                         </div>
-                        
                         <div class="menu">
+                            <!-- navbar btn  -->
+                            <button class="nav-btn">
+                                <i class="fa-solid fa-bars"></i>
+                            </button>
+                            <!-- navbar menu  -->
                             <ul>
                                 <li><a href="">HOME</a></li>
                                 <li><a href="">OUR FIRM</a></li>
                                 <li><a href="">PRACTICE AREAS</a></li>
                                 <li><a href="">CLIENT REVIEWS</a></li>
                                 <li><a href="">CONTACT US</a></li>
-                                <li class="pt-5"><i class="fa-solid fa-magnifying-glass"></i></li>                                
-                                <h1><i class="fa-solid fa-bars"></i></h1>
-                            </ul>                    
+                                <li class="pt-5">
+                                    <i class="fa-solid fa-magnifying-glass"></i>
+                                </li>
+                            </ul>
                         </div>
                     </div>
                 </div>
             </header>
-            <!-- Header section -->
-    
+
             <!-- Main section -->
             <section class="main-section">
                 <div class="container">
-                   <div class="main-wrapper">
-                    <h3>SINCE 1998</h3>
-                    <h1>Maineri Law Firm • Personal Injury Attorney</h1>
-                    <p>We are thorough, steadfast, and rigorous – every case, every client, every single time.</p>
-                    <button>GET A FREE CASE EVALUATION TODAY</button>
-                   </div>
+                    <div class="main-wrapper">
+                        <h3>SINCE 1998</h3>
+                        <h1>Maineri Law Firm • Personal Injury Attorney</h1>
+                        <p>
+                            We are thorough, steadfast, and rigorous – every
+                            case, every client, every single time.
+                        </p>
+                        <button>GET A FREE CASE EVALUATION TODAY</button>
+                    </div>
                 </div>
             </section>
             <!-- Main section -->
