--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
             <section class="main-section">
                 <div class="container">
                     <div class="main-wrapper">
-                        <h3>SINCE 1998</h3>
-                        <h1>Maineri Law Firm • Personal Injury Attorney</h1>
+                        <h3 class="since">SINCE 1998</h3>
+                        <h1 class="lg-title">Maineri Law Firm • Personal Injury Attorney</h1>
                         <p>
                             We are thorough, steadfast, and rigorous – every
                             case, every client, every single time.
