crate care result section

--- a/index.html
+++ b/index.html
@@ -82,5 +82,47 @@
             </section>
             <!-- Main section -->
         </div>
+
+        <!-- Case result section -->
+        <section class="case-result">
+            <div class="container">
+                <div class="card-wrap">
+                    <div class="case-card">
+                        <img src="img/Approval.png" alt="">
+                        <h1><i class="fa-solid fa-dollar-sign"></i> 3.5M +</h1>
+                        <p>
+                            <span>Awarded to</span>
+                            <span>shooting victims</span>
+                        </p>
+                    </div>
+                    <div class="case-card">
+                        <img src="img/Approval.png" alt="">
+                        <h1><i class="fa-solid fa-dollar-sign"></i> 3.5M +</h1>
+                        <p>
+                            <span>Awarded to</span>
+                            <span>shooting victims</span>
+                        </p>
+                    </div>
+                    <div class="case-card">
+                        <img src="img/Approval.png" alt="">
+                        <h1><i class="fa-solid fa-dollar-sign"></i> 3.5M +</h1>
+                        <p>
+                            <span>Awarded to</span>
+                            <span>shooting victims</span>
+                        </p>
+                    </div>
+                    <div class="case-card">
+                        <img src="img/Approval.png" alt="">
+                        <h1><i class="fa-solid fa-dollar-sign"></i> 3.5M +</h1>
+                        <p>
+                            <span>Awarded to</span>
+                            <span>shooting victims</span>
+                        </p>
+                    </div>
+                </div>
+
+                <p class="card-description">The case results contained herein are illustrative of some of the results we have obtained for our clients. Individual case results will vary depending upon the details of each case. </p>
+            </div>
+        </section>
     </body>
 </html>
