crate about section

--- a/index.html
+++ b/index.html
@@ -86,7 +86,9 @@
         <!-- Case result section -->
         <section class="case-result">
             <div class="container">
+                <!-- card wrap -->
                 <div class="card-wrap">
+                    <!-- card -->
                     <div class="case-card">
                         <img src="img/Approval.png" alt="">
                         <h1><i class="fa-solid fa-dollar-sign"></i> 3.5M +</h1>
@@ -95,6 +97,7 @@
                             <span>shooting victims</span>
                         </p>
                     </div>
+                    <!-- card -->
                     <div class="case-card">
                         <img src="img/Approval.png" alt="">
                         <h1><i class="fa-solid fa-dollar-sign"></i> 3.5M +</h1>
@@ -103,6 +106,7 @@
                             <span>shooting victims</span>
                         </p>
                     </div>
+                    <!-- card -->
                     <div class="case-card">
                         <img src="img/Approval.png" alt="">
                         <h1><i class="fa-solid fa-dollar-sign"></i> 3.5M +</h1>
@@ -111,6 +115,7 @@
                             <span>shooting victims</span>
                         </p>
                     </div>
+                    <!-- card -->
                     <div class="case-card">
                         <img src="img/Approval.png" alt="">
                         <h1><i class="fa-solid fa-dollar-sign"></i> 3.5M +</h1>
@@ -124,5 +129,50 @@
                 <p class="card-description">The case results contained herein are illustrative of some of the results we have obtained for our clients. Individual case results will vary depending upon the details of each case. </p>
             </div>
         </section>
+
+        <!-- About us -->
+
+        <section>
+            <div class="container">
+                <div class="about-us">
+                    <span>About Us</span>
+                    <h1>The Maineri Law Firm</h1>
+                    <div ></div>
+                    <p>When it comes to handling your case, experience counts.</p>
+                </div>
+            </div>
+        </section>
+
+        <!-- Logo set -->
+        <section class="logo-set-sec">
+            <div class="container">
+                <div class="logo-set">
+                    <div class="logo-img1">
+                        <img src="img/logoimg1.png" alt="">
+                    </div>
+                    <div class="logo-img2">
+                        <img src="img/logoimg2.png" alt="">
+                    </div>
+                    <div class="logo-img3">
+                        <img src="img/logoimg3.png" alt="">
+                    </div>
+                    <div class="logo-img4">
+                        <img src="img/logoimg4.png" alt="">
+                    </div>
+                    <div class="logo-img5">
+                        <img src="img/logoimg5.png" alt="">
+                    </div>
+                    <div class="logo-img6">
+                        <img src="img/logoimg6.png" alt="">
+                    </div>
+                    <div class="logo-img7">
+                        <img src="img/logoimg7.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Our story section -->
+
     </body>
 </html>
