create 2 new section

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                 <div class="about-us">
                     <span>About Us</span>
                     <h1>The Maineri Law Firm</h1>
-                    <div class="border-3p"></div>
+                    <div class="about-border"></div>
                     <p>When it comes to handling your case, experience counts.</p>
                 </div>
             </div>
@@ -214,20 +214,16 @@
         <!-- Our service -->
         <section class="service-sec">
             <div class="service-bg"></div>
-            <div class="container">
-                <div class="our-service">
-                    <h2>Our Service</h2>
-
-                    <h5>
-                        <span>With over 23 years of experience, we have successfully recovered millions</span>
-                        <span>in awards for our clients.</span>
-                    </h5><br><br>
-
-                    <h5>
-                        <span>We will advise you, guide you, and protect you because we know that</span>
-                        <span>everything important to you is at risk.</span> 
-                    </h5>                    
-                </div>
+            <div class="our-service">
+                <h3>Our Service</h3>
+                <h4>
+                    <span>With over 23 years of experience, we have successfully recovered millions</span>
+                    <span>in awards for our clients.</span>
+                </h4>
+                <h4>
+                    <span>We will advise you, guide you, and protect you because we know that </span>
+                    <span>everything important to you is at risk. </span>
+                </h4>
             </div>
         </section>
         <!-- Our services -->
@@ -255,5 +251,59 @@
             </div>
         </section>
         <!-- Why chose us -->
+
+        <!-- Practice section -->
+        <section>
+            <div class="container">
+                <div class="practice-areas">
+                    <span>Our Servies</span>
+                    <h1>Practice areas</h1>
+                    <div class="practice-border"></div>
+                    <p>In each area of service that we offer, we promise that you will receive the very best legal representation in the industry.</p>
+                </div>
+            </div>
+        </section>
+        <!-- Practice section -->
+
+        <!-- Type of damage -->
+        <section>
+            <div class="type-of-damage">
+                <div>
+                    <h5>Personal injury</h5>
+                    <p>
+                        It is strongly recommended that a person finds a personal injury attorney after sustaining injuries.
+                    </p>
+                    <button>LEARN MORE</button>
+                </div>
+                <div>
+                    <span>Slip and Fall</span>
+                </div>
+                <div>
+                    <span>Animal Attack</span>
+                </div>
+                <div>
+                    <span>Trucking Accidents</span>
+                </div>
+                <div>
+                    <span>Vehicle VS Pedestrian</span>
+                </div>
+                <div>
+                    <span>Motorcycle Accidents</span>
+                </div>
+                <div>
+                    <span>Wrongful Death</span>
+                </div>
+                <div>
+                    <span>Car Accidents</span>
+                </div>
+                <div>
+                    <span>Bicycle Accidents</span>
+                </div>
+                <div>
+                    <span>Bus Accidents</span>
+                </div>
+            </div>
+        </section>
+        <!-- Type of damage -->
     </body>
 </html>
