--- a/test.html
+++ b/test.html
@@ -8,11 +8,12 @@
     <link rel="stylesheet" href="test.css">
 </head>
 <body>
-    <div class="img-set">
-        <img src="img/logoimg1.png" alt="">
-        <img src="img/logoimg2.png" alt=""> 
-        <img src="img/logoimg3.png" alt="">
-        <img src="img/logoimg4.png" alt="">
+    <div class="div-wrapper">
+        <div class="div1"></div>
+        <div class="div2"></div>
+        <div class="div3"></div>
+        <div class="div4"></div>
+        <div class="div5"></div>
     </div>
 </body>
 </html>
