--- a/test.html
+++ b/test.html
@@ -9,11 +9,7 @@
 </head>
 <body>
     <div class="div-wrapper">
-        <div class="div1"></div>
-        <div class="div2"></div>
-        <div class="div3"></div>
-        <div class="div4"></div>
-        <div class="div5"></div>
+        <div class="div"></div>
     </div>
 </body>
 </html>
