some change in about page

--- a/index.html
+++ b/index.html
@@ -386,14 +386,36 @@
                     <div class="border-oliv"></div>
                 </div>
 
-                <div class="march-26">
-                    <div class="news26-img">
-                        <img src="img/march-26 news.png" alt="">
+                <div class="news-wrap">
+                    <div class="march-26">
+                        <div class="news26-img">
+                            <img src="img/march-26 news.png" alt="">
+                        </div>
+                        <div class="news26-body">
+                             <p><a href="">NEWS: </a>MARCH 26, 2022</p>
+                             <h1>Factors to Consider When Calculating a Personal Injury Claim in Florida</h1>
+                             <a href="" class="read-more">Read more <i class="fa-solid fa-arrow-right-long"></i></a>
+                        </div>
                     </div>
-                    <div class="news26-body">
-                         <p><span>NEWS:</span>MARCH 26, 2022</p>
-                         <h1>Factors to Consider When Calculating a Personal Injury Claim in Florida</h1>
-                         <a href="" class="read-more">Read more <i class="fa-solid fa-arrow-right-long"></i></a>
+                    <div class="march-19">
+                        <div class="news19-img">
+                            <img src="img/march-19.png" alt="">
+                        </div>
+                        <div class="news26-body">
+                             <p><a href="">NEWS: </a>MARCH 26, 2022</p>
+                             <h1>Factors to Consider When Calculating a Personal Injury Claim in Florida</h1>
+                             <a href="" class="read-more">Read more <i class="fa-solid fa-arrow-right-long"></i></a>
+                        </div>
+                    </div>
+                    <div class="march-27">
+                        <div class="news27-img">
+                            <img src="img/march-27.png" alt="">
+                        </div>
+                        <div class="news26-body">
+                             <p><a href="">NEWS: </a>MARCH 26, 2022</p>
+                             <h1>Factors to Consider When Calculating a Personal Injury Claim in Florida</h1>
+                             <a href="" class="read-more">Read more <i class="fa-solid fa-arrow-right-long"></i></a>
+                        </div>
                     </div>
                 </div>
             </div>
