--- a/about.html
+++ b/about.html
@@ -68,26 +68,230 @@
                 </div>
             </header>
             <!-- Header-section -->
-            <div class="about-main-bg">
+            <div class="common-main-bg about-main-bg">
                 <h1>ABOUT US</h1>
                 <p>HOME/OUR FIRM</p>
             </div>
         </div>
         <!-- About head wrap -->
 
+        <!-- Logo set -->
+        <section class="logo-set-sec">
+            <div class="container">
+                <div class="logo-set">
+                    <img src="img/logoimg1.png" alt="">
+                    <img src="img/logoimg2.png" alt="">
+                    <img src="img/logoimg3.png" alt="">
+                    <img src="img/logoimg4.png" alt="">
+                    <img src="img/logoimg5.png" alt="">
+                    <img src="img/logoimg6.png" alt="">
+                    <img src="img/logoimg7.png" alt="">
+                </div>
+            </div>
+        </section>
+        <!-- Logo set -->
+
         <!-- Paul e maineri -->
         <section class="paul-maineri">
             <div class="container">
-                <div class="paul-e-content">
+                <div class="poul-img">
+                    <img src="img/paul img.png" alt="">
+                </div>
+                <div class="poul-e-content">
                     <h1>Paul E. Maineri, Attorney at Law</h1>
                     <p>Paul E. Maineri established The Maineri Law Firm in 1998 with the intent and commitment to provide the best in representation to the everyday citizen. Since its inception, The Maineri Law Firm has and continues to follow a simple, time-tested principle – “Take Care of People.”</p>
+                    <p>Mr. Maineri works directly with his clients and handles each case with the utmost care. His results speak for themselves with millions of dollars awarded in personal injury settlements and winning jury verdicts. </p>   
                     <br>
-                    <p>Mr. Maineri works directly with his clients and handles each case with the utmost care. His results speak for themselves with millions of dollars awarded in personal injury settlements and winning jury verdicts. </p>
-
-                    
                 </div>
             </div>
         </section>
         <!-- Paul e maineri -->
+
+        <!-- Our Mission -->
+        <section class="our-mission">
+            <div class="container">
+                <div class="mission-batch">Our Mission</div>
+
+                <div class="mission-content">
+                    <h1>
+                        <span>Our main goal is to secure the best recovery possible for you,</span> 
+                        <span>your family, and for your future. </span>
+                    </h1>
+                    <div class="play-btn">
+                        <h2> 
+                            <i class="fa-solid fa-play fa-2xl"></i>
+                        </h2>
+                    </div>
+                    <button>GET A FREE CASE EVALUATION TODAY</button>
+                </div>
+            </div>
+        </section>
+        <!-- Our Mission -->
+
+        <!-- Client Reviews -->
+        <section>
+            <div class="container">
+                <div class="client-reviews">
+                    <spn class="oliv-span">Client Reviews</spn>
+                    <h1 class="common-head">Real Client Stories
+                    </h1>
+                    <div class="border-oliv"></div>
+                </div>
+            </div>
+
+            <div class="reviews-wrap">
+                <div class="reviews-content">
+                    <div class="anython-reviews">
+                        <h1><i class="fa-solid fa-quote-left"></i></h1>
+                        <p>“We needed help after our car accident, and we were told that Paul Maineri was the best man for the job.  He was able to guide us throughout the whole process and help get us the treatment and money we deserve.  I highly recommend him to anyone who’s been in  accident.</p>
+                    </div>
+
+                    <div class="shift-btns">
+                        <img src="img/Right Button.png" alt="">
+                        <h2>Anthony C.</h2>
+                        <img src="img/left-Button.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Client Reviews -->
+
+        <!-- contact us section -->
+        <section class="contact-us">
+            <div class="container">
+                <div class="contact-heading">
+                    <h1 class="common-head">Contact Us For a Free Case Evaluation</h1>
+                    <div class="border-oliv"></div>
+                </div>
+                <div class="contact-row">
+                    <div class="col-50">
+                        <input type="text" placeholder="First name">
+                    </div>
+                    <div class="col-50">
+                        <input type="text" placeholder="Last name">
+                    </div>
+                    <div class="col-50">
+                        <input type="email" placeholder="Email">
+                    </div>
+                    <div class="col-50">
+                        <input type="number" placeholder="Mobile">
+                    </div>
+
+                    <select name="" id="">
+                        <option value="Autralia">Australia</option>
+                        <option value="Autralia">Australia</option>
+                        <option value="Autralia">Australia</option>
+                    </select>
+
+                    <div class="col-100">
+                        <textarea name="" id="" cols="30" rows="10"></textarea>
+                    </div>
+
+                    <div class="contact-bottom">
+                        <div class="protected">
+                            <img src="img/contact-protected.png" alt="">
+                        </div>
+                        <div class="logo">
+                            <img src="img/logoimg3.png" alt="">
+                            <img src="img/logoimg1.png" alt="">
+                        </div>
+                    </div>
+
+                    <div class="contact-submit">
+                        <input type="submit" name="" id="" value="YES, I'D LIKE A FREE CASE EVALUATION">
+                    </div>
+                    <div class="no-recovary">
+                        <a>We work on a contingency basis. No recovery, no fee.</a>
+                    </div>
+                </div>  
+            </div>
+        </section>
+        <!-- contact us section -->
+
+        <!-- letest news -->
+        <section>
+            <div class="container">
+                <div class="news-heading">
+                    <span class="oliv-span">Headlines</span>
+                    <h1 class="common-head">LATEST NEWS</h1>
+                    <div class="border-oliv"></div>
+                </div>
+
+                <div class="news-wrap">
+                    <div class="march-26">
+                        <div class="news26-img">
+                            <img src="img/march-26 news.png" alt="">
+                        </div>
+                        <div class="news26-body">
+                             <p><a href="">NEWS: </a>MARCH 26, 2022</p>
+                             <h1>Factors to Consider When Calculating a Personal Injury Claim in Florida</h1>
+                             <a href="" class="read-more">Read more <i class="fa-solid fa-arrow-right-long"></i></a>
+                        </div>
+                    </div>
+                    <div class="march-19">
+                        <div class="news19-img">
+                            <img src="img/march-19.png" alt="">
+                        </div>
+                        <div class="news26-body">
+                             <p><a href="">NEWS: </a>MARCH 26, 2022</p>
+                             <h1>Factors to Consider When Calculating a Personal Injury Claim in Florida</h1>
+                             <a href="" class="read-more">Read more <i class="fa-solid fa-arrow-right-long"></i></a>
+                        </div>
+                    </div>
+                    <div class="march-27">
+                        <div class="news27-img">
+                            <img src="img/march-27.png" alt="">
+                        </div>
+                        <div class="news26-body">
+                             <p><a href="">NEWS: </a>MARCH 26, 2022</p>
+                             <h1>Factors to Consider When Calculating a Personal Injury Claim in Florida</h1>
+                             <a href="" class="read-more">Read more <i class="fa-solid fa-arrow-right-long"></i></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- letest news -->
+
+        <!-- footer section -->
+        <footer>
+            <div class="container">
+                <div class="footer-row">
+                    <div class="footer-logo">
+                        <div class="logo-side">
+                            <div class="logo">
+                                <img src="img/navber-logo.png" alt="" />
+                            </div>
+                            <div class="brand-name">
+                                <h2>Maineri Low Firm</h2>
+                                <p>Paul E. Maineri Attorney at Law, Inc.</p>
+                            </div>
+                        </div>
+                        <h3>
+                            <span>We stand ready, willing, and able to fight</span>
+                            <span>for you every step of the way. </span>
+                        </h3>
+                        <p>© 2022 Maineri Law Firm. All rights reserved</p>
+                    </div>
+                    <div class="footer-col">
+                        <h3>Find Us</h3>
+                        <p>29970 Technology Dr., Suite 106</p>
+                        <p>Murrieta, CA 92563</p>
+                    </div>
+                    <div class="footer-col">
+                        <h3>Contact Us</h3>
+                        <p>(951)-698-4200 (office)</p>
+                        <p>(951)-698-4212 (fax)</p>
+                    </div>
+                    <div class="footer-col">
+                        <h3>About Us</h3>
+                        <a>About our Firm</a>
+                        <a>Practice Areas</a>
+                        <a>Client Reviews</a>
+                    </div>
+                </div>
+            </div>
+        </footer>
+        <!-- footer section -->
     </body>
 </html>
