--- a/index.html
+++ b/index.html
@@ -377,6 +377,58 @@
         </section>
         <!-- Client Reviews -->
 
+        <!-- contact -->
+        <section class="contact-us">
+            <div class="container">
+                <div class="contact-heading">
+                    <h1 class="common-head">Contact Us For a Free Case Evaluation</h1>
+                    <div class="border-oliv"></div>
+                </div>
+                <div class="contact-row">
+                    <div class="col-50">
+                        <input type="text" placeholder="First name">
+                    </div>
+                    <div class="col-50">
+                        <input type="text" placeholder="Last name">
+                    </div>
+                    <div class="col-50">
+                        <input type="email" placeholder="Email">
+                    </div>
+                    <div class="col-50">
+                        <input type="number" placeholder="Mobile">
+                    </div>
+
+                    <select name="" id="">
+                        <option value="Autralia">Australia</option>
+                        <option value="Autralia">Australia</option>
+                        <option value="Autralia">Australia</option>
+                    </select>
+
+                    <div class="col-100">
+                        <textarea name="" id="" cols="30" rows="10"></textarea>
+                    </div>
+
+                    <div class="contact-bottom">
+                        <div class="protected">
+                            <img src="img/contact-protected.png" alt="">
+                        </div>
+                        <div class="logo">
+                            <img src="img/logoimg3.png" alt="">
+                            <img src="img/logoimg1.png" alt="">
+                        </div>
+                    </div>
+
+                    <div class="contact-submit">
+                        <input type="submit" name="" id="" value="YES, I'D LIKE A FREE CASE EVALUATION">
+                    </div>
+                    <div class="no-recovary">
+                        <a>We work on a contingency basis. No recovery, no fee.</a>
+                    </div>
+                </div>  
+            </div>
+        </section>
+        <!-- contact  -->
+
         <!-- letest news -->
         <section>
             <div class="container">
@@ -421,7 +473,6 @@
             </div>
         </section>
         <!-- letest news -->
-
 
         <!-- footer section -->
         <footer>
