complete the contact page

--- a/contact.html
+++ b/contact.html
@@ -71,9 +71,9 @@
     <!-- contact head wrap -->
 
     <!-- Find section -->
-    <section class="contact-us">
+    <section class="contact-us-wrap">
         <div class="container">
-            <div class="find-us">
+            <div class="find-us contact">
                 <img src="img/contact-img/find-us.png" alt="">
                 <h1>Find Us</h1>
                 <p>
@@ -81,7 +81,7 @@
                     <span>Murrieta, CA 92563</span>
                 </p>
             </div>
-            <div class="contact-us">
+            <div class="contact-me contact">
                 <img src="img/contact-img/contact-us.png" alt="">
                 <h1>Contact Us</h1>
                 <p>
@@ -89,7 +89,7 @@
                     <span>(951)-698-4212 (fax)</span>
                 </p>
             </div>
-            <div class="email">
+            <div class="email contact">
                 <img src="img/contact-img/email.png" alt="">
                 <h1>Email</h1>
                 <p>
