creating attorney section

--- a/about.html
+++ b/about.html
@@ -75,7 +75,50 @@
         </div>
         <!-- About head wrap -->
 
-        <!--  -->
+        <!--Attorney section  -->
+        <div class="attorney-sec common-oliv-bg">
+            <div class="container">
+                <div class="attorney-content">
+                    <h1>
+                        Paul E. Maineri, Attorney at Law
+                    </h1>
+                    <p>
+                        Paul E. Maineri established The Maineri Law Firm in 1998 with the intent and commitment to provide the best in representation to the everyday citizen. Since its inception, The Maineri Law Firm has and continues to follow a simple, time-tested principle – “Take Care of People.”
+                    </p>
+                    <br>
+                    <p>Mr. Maineri works directly with        hisclients and handles each case with the utmost care. His results speak for themselves with millions of dollars awarded in personal injury settlements and winning jury verdicts. 
+                    </p>
+                    <div class="education edu-margin">
+                        <p>Education</p>
+                        <div class="circle-plus">
+                            <p>+</p>
+                        </div>
+                    </div>
+                    <div class="education">
+                        <p>Admitted To The Practice Of Law</p>
+                        <div class="circle-plus">
+                            <p>+</p>
+                        </div>
+                    </div>
+                    <div class="education">
+                        <p>Instruction</p>
+                        <div class="circle-plus">
+                            <p>+</p>
+                        </div>
+                    </div>
+                    <div class="education">
+                        <p>Membership/Affiliations</p>
+                        <div class="circle-plus">
+                            <p>+</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="poul-img">
+                    <img src="img/about-img/poul-img.png" alt="">
+                </div>
+            </div>
+        </div>
+        <!--Attorney section  -->
 
         <!-- Our Mission -->
         <section class="our-mission">
