complete about page

--- a/about.html
+++ b/about.html
@@ -120,26 +120,57 @@
         </div>
         <!--Attorney section  -->
 
-        <!-- Our Mission -->
-        <section class="our-mission">
+        <!-- Seth Kohen -->
+        <section class="seth-kohen common-oliv-bg">
             <div class="container">
-                <div class="mission-batch">Our Mission</div>
-
-                <div class="mission-content">
+                <div class="seth-img">
+                    <img src="img/about-img/seth-cohen-img.png" alt="">
+                </div>
+                <div class="attorney-content">
                     <h1>
-                        <span>Our main goal is to secure the best recovery possible for you,</span> 
-                        <span>your family, and for your future. </span>
+                        Seth Cohen, Attorney at Law
                     </h1>
-                    <div class="play-btn">
-                        <h2> 
-                            <i class="fa-solid fa-play fa-2xl"></i>
-                        </h2>
+                    <p>
+                        Seth Cohen is proud to be representing clients in Southern California and commits his full effort and detail-oriented mindset to advocate on their behalf. 
+                    </p>
+                    <br>
+                    <p>
+                        The productivity of his work ethics was apparent throughout his law school education. 
+                    </p>
+                    <div class="education edu-margin">
+                        <p>Education</p>
+                        <div class="circle-plus">
+                            <p>+</p>
+                        </div>
                     </div>
-                    <button>GET A FREE CASE EVALUATION TODAY</button>
+                    <div class="education">
+                        <p>Distinction</p>
+                        <div class="circle-plus">
+                            <p>+</p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
-        <!-- Our Mission -->
+        <!-- Seth Kohen -->
+
+        <!-- Our service -->
+        <section class="service-sec">
+            <div class="container">
+                <h3>Our Mission</h3>
+                <div class="our-service">
+                    <h4>
+                        <span>With over 23 years of experience, we have successfully recovered millions</span>
+                        <span>in awards for our clients.</span>
+                    </h4>
+                    <h4>
+                        <span>We will advise you, guide you, and protect you because we know that </span>
+                        <span>everything important to you is at risk. </span>
+                    </h4>
+                </div>
+            </div>
+        </section>
+        <!-- Our services -->
 
         <!-- Client Reviews -->
         <section>
